exports[`Dialog renders correctly 1`] = `
<div
  class="kcnBeL">
  <div />
  <div>
    <div
      class="mc-dialog--header">
      <div />
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body" />
    <div
      class="mc-dialog--footer">
      <button
        class="gZkAti">
        Cancel
      </button>
      <button
        class="ieFjGg">
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog renders modal 1`] = `
<div
  class="kcnBeL">
  <div />
  <div>
    <div
      class="mc-dialog--header">
      <div />
    </div>
    <div
      class="mc-dialog--body" />
    <div
      class="mc-dialog--footer">
      <button
        class="gZkAti">
        Cancel
      </button>
      <button
        class="ieFjGg">
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog renders with props 1`] = `
<div
  class="cERukp"
  open="">
  <div />
  <div>
    <div
      class="mc-dialog--header">
      <div>
        Dialog Title
      </div>
      <button>
        ×
      </button>
    </div>
    <div
      class="mc-dialog--body">
      Hello Dialog!
    </div>
    <div
      class="mc-dialog--footer">
      <button
        class="gZkAti">
        Cancel
      </button>
      <button
        class="ieFjGg">
        Submit
      </button>
    </div>
  </div>
</div>
`;
